--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>London Driven Home Page By Ashish Negi</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./assets/owl-carousel/css/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/owl-carousel/css/owl.theme.default.min.css">
 </head>
@@ -145,9 +146,10 @@
                    </div>
                 </div>
                 <div class="row">
+                  <div class="main-content">
                     <div class="owl-carousel owl-theme">
-                        <div class="item mx-3">
-                            <div class="card text-center p-4 rounded-5">
+                        <div class="item mx-2">
+                            <div class="card text-center p-2 rounded-5">
                                 <img src="./assets/images/car-image.png" class="card-img-top img-fluid" alt="Car image">
                                 <div class="card-body">
                                     <h5 class="card-title">Mercedes S Class</h5>
@@ -156,8 +158,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item mx-3">
-                            <div class="card text-center p-4 rounded-5">
+                        <div class="item mx-2">
+                            <div class="card text-center p-2 rounded-5">
                                 <img src="./assets/images/car-image.png" class="card-img-top img-fluid" alt="Car image">
                                 <div class="card-body">
                                     <h5 class="card-title">Mercedes S Class</h5>
@@ -166,8 +168,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item mx-3">
-                            <div class="card text-center p-4 rounded-5">
+                        <div class="item mx-2">
+                            <div class="card text-center p-2 rounded-5">
                                 <img src="./assets/images/car-image.png" class="card-img-top img-fluid" alt="Car image">
                                 <div class="card-body">
                                     <h5 class="card-title">Mercedes S Class</h5>
@@ -176,8 +178,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item mx-3">
-                            <div class="card text-center p-4 rounded-5">
+                        <div class="item mx-2">
+                            <div class="card text-center p-2 rounded-5">
                                 <img src="./assets/images/car-image.png" class="card-img-top img-fluid" alt="Car image">
                                 <div class="card-body">
                                     <h5 class="card-title">Mercedes S Class</h5>
@@ -186,8 +188,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item mx-3">
-                            <div class="card text-center p-4 rounded-5">
+                        <div class="item mx-2">
+                            <div class="card text-center p-2 rounded-5">
                                 <img src="./assets/images/car-image.png" class="card-img-top img-fluid" alt="Car image">
                                 <div class="card-body">
                                     <h5 class="card-title">Mercedes S Class</h5>
@@ -196,8 +198,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item mx-3 text-center">
-                            <div class="card text-center p-4 rounded-5">
+                        <div class="item mx-2 text-center">
+                            <div class="card text-center p-2 rounded-5">
                                 <img src="./assets/images/car-image.png" class="card-img-top img-fluid" alt="Car image">
                                 <div class="card-body">
                                     <h5 class="card-title">Mercedes S Class</h5>
@@ -207,6 +209,12 @@
                             </div>
                         </div>
                     </div>
+                    <div class="owl-theme">
+                        <div class="owl-controls">
+                          <div class="custom-nav owl-nav"></div>
+                        </div>
+                      </div>
+                  </div>  
                 </div>
             </div>
         </section>
@@ -215,27 +223,29 @@
     <script src="./assets/owl-carousel/js/jquery.min.js"></script>
     <script src="./assets/owl-carousel/js/owl.carousel.min.js"></script>
     <script>
-        $('.owl-carousel').owlCarousel({
-        stagePadding: 50,
-        loop:true,
-        nav:true,
-        dots:false,
+        $('.main-content .owl-carousel').owlCarousel({
+        stagePadding: 30,
+        loop: true,
+        margin: 10,
+        nav: true,
+        dots: false,
+        navText: [
+            '<i class="bi bi-arrow-left-circle-fill"></i>',
+            '<i class="bi bi-arrow-right-circle-fill"></i>'
+        ],
+        navContainer: '.main-content .custom-nav',
         responsive:{
             0:{
-                items:1,
-                nav:true
+                items: 1
             },
             600:{
-                items:2,
-                nav:false
+                items: 3
             },
             1000:{
-                items:3,
-                nav:true,
-                loop:false
+                items: 3
             }
         }
-    })
+    });
     </script>
 </body>
 </html>
